[package]
name = "grrs"
version = "1.0.0"
edition = "2021"
authors = ["Clayton Jensen <clayton.jensen@yourmommas.house>"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
